k8s/delivery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      labels:
        app: delivery-app
    spec:
      containers:
        - name: delivery
          image: smith1984/svc_delivery:0.0.1
          ports:
            - name: web
              containerPort: 8083
          livenessProbe:
            httpGet:
              port: 8083
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8083
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: "/app/resources/application.yaml"
              subPath: "application.yaml"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config-application-delivery
