k8s/delivery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery-app
spec:
  selector:
    app: delivery-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
